<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAbout"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_pic_height"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:src="@drawable/palace_square" />

        <TextView
            style="@style/element_of_list_in_main_menue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_st_petersburg" />

        <TextView
            style="@style/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/StPetersburg_description" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_pic_height"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:src="@drawable/romanovs" />

        <TextView
            style="@style/element_of_list_in_main_menue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history" />

        <TextView
            style="@style/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/history_short" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_pic_height"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:src="@drawable/hermitage_cat" />

        <TextView
            style="@style/element_of_list_in_main_menue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_hermitage_cats" />

        <TextView
            style="@style/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/hermitage_cat" />
    </LinearLayout>
</ScrollView>